# dinero-exchange-cli

./: Cargo.toml  README.md
src/: api.rs  main.rs
