[package]
name = "dinero-exchange-cli"
version = "0.1.0"
edition = "2021"

authors = ["Raed667"]
license = "MIT"
description = """
A proof of concept CLI that uses Dinero.
"""
repository = "https://github.com/raed667/dinero-exchange-cli"
homepage = "https://github.com/raed667/dinero-exchange-cli"
keywords = ["money", "dinero"]


[dependencies]
dinero = "0.0.8"
clap = { version = "4.0.17", features = ["derive"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.1"
log = "0.4.0"
env_logger = "0.9.0"
